test/subjects/errors/bad_arrays_read5.php
<?php

	f ($a[]); // { Error: Cannot use [] for reading }

?>
